--- a/Proy_integ_4la/src/main/java/com/mycompany/proy_integ_4la/CrearEquipos.form
+++ b/Proy_integ_4la/src/main/java/com/mycompany/proy_integ_4la/CrearEquipos.form
@@ -61,7 +61,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Estado"/>
+            <Property name="text" type="java.lang.String" value="descripcion"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
